WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196551
HTML fragment serialization should not strip whitespace from URL attribute values
https://bugs.webkit.org/show_bug.cgi?id=196551
Summary
HTML fragment serialization should not strip whitespace from URL attribute va...
Chris Dumez
Reported
2019-04-03 12:07:05 PDT
HTML fragment serialization should not strip whitespace from URL attribute values as per: -
https://html.spec.whatwg.org/multipage/parsing.html#html-fragment-serialisation-algorithm
Attachments
Patch
(12.81 KB, patch)
2019-04-03 12:09 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-04-03 12:09:07 PDT
Created
attachment 366628
[details]
Patch
WebKit Commit Bot
Comment 2
2019-04-03 13:08:40 PDT
Comment on
attachment 366628
[details]
Patch Clearing flags on attachment: 366628 Committed
r243821
: <
https://trac.webkit.org/changeset/243821
>
WebKit Commit Bot
Comment 3
2019-04-03 13:08:41 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-04-03 13:10:18 PDT
<
rdar://problem/49570013
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug